<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateListingActivity"

    android:padding="10dp"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/createListing_description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/createListing_setAvailability_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_availability"

                style="@style/Widget.AppCompat.Button.Colored"
                />

            <TextView
                android:id="@+id/createListing_availability_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/availability"

                android:gravity="center"

                android:textAppearance="@style/TextAppearance.AppCompat.Caption"

                />

            <TextView
                android:id="@+id/createListing_pets_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pets" />

            <CheckBox
                android:id="@+id/dog_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog" />

            <CheckBox
                android:id="@+id/cat_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat" />

            <CheckBox
                android:id="@+id/guineaPig_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guinea_pig" />

            <CheckBox
                android:id="@+id/amphibians_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amphibians" />

            <CheckBox
                android:id="@+id/reptiles_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reptiles" />

            <EditText
                android:id="@+id/createListing_others_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/others"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/createListing_number_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number" />

            <EditText
                android:id="@+id/createListing_number_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insert_number"
                android:inputType="number" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submit"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        style="@style/Widget.AppCompat.Button.Colored"

        />

</RelativeLayout>