<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"

    android:padding="10dp"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center|top"

            >

            <EditText
                android:id="@+id/register_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/register_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_confirmPassword_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_firstName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/register_lastName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/register_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/register_address_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        style="@style/Widget.AppCompat.Button.Colored"

        />

</RelativeLayout>