<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditAccountActivity"

    android:padding="10dp"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/editAccount_edit_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_account"

                android:layout_gravity="center_horizontal"

                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/editAccount_firstName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editAccount_lastName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editAccount_phoneNumber_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editAccount_address_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editAccount_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editAccount_confirmPassword_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/editAccount_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        style="@style/Widget.AppCompat.Button.Colored" />
</RelativeLayout>