<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"

    android:padding="10dp"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_centerInParent="true"

        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"

            android:gravity="center"

            android:textAppearance="@style/TextAppearance.AppCompat.Headline"

            />

        <EditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        style="@style/Widget.AppCompat.Button.Colored"

        />
</RelativeLayout>