<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"

    android:padding="10dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center"

        >

        <ImageView
            android:id="@+id/main_logo_imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/placeholder_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"


        >

        <Button
            android:id="@+id/main_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/login"
            android:onClick="login"

            style="@style/Widget.AppCompat.Button.Colored"

            />

        <Button
            android:id="@+id/main_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/register"
            android:onClick="register"

            style="@style/Widget.AppCompat.Button.Colored"

            />
    </LinearLayout>

</RelativeLayout>