<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"



            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            />

        <TextView
            android:id="@+id/home_account_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="bottom"

        android:padding="10dp"
        >

        <Button
            android:id="@+id/home_findPetCare_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pet_care"
            android:onClick="findPetCare"

            style="@style/Widget.AppCompat.Button.Colored"

            />

        <Button
            android:id="@+id/home_offerPetCare_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_pet_care"
            android:onClick="offerPetCare"

            style="@style/Widget.AppCompat.Button.Colored"

            />
    </LinearLayout>
</RelativeLayout>