<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:id="@+id/list_item_layout"

    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    android:clickable="true"
    >


    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:orientation="vertical"

        android:gravity="center_vertical"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:background="@color/colorPrimaryLight"

        >

        <TextView
            android:id="@+id/item_availability_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability"

            android:gravity="center"

            android:textColor="@color/lightTextColor"

            android:textAppearance="@style/TextAppearance.AppCompat.Title"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"

        android:gravity="center_vertical"

        android:paddingLeft="10dp"

        android:layout_toRightOf="@id/layout_name"



        >

        <TextView
            android:id="@+id/item_pets_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pets"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />

        <TextView
            android:id="@+id/item_number_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"

            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"

            />
    </LinearLayout>
</RelativeLayout>